MCPJVM-529: Java 21 Dynamic Attach Runtime